tests/common/compile-error/01_domain_frame_syntax.frs
@@target rust

// NEGATIVE TEST: Frame syntax in domain should fail Rust compilation
// Expected error: expected type, found keyword `var`

@@system NegativeTest {
    machine:
        $Ready { }
    domain:
        var count: i32 = 0
}

fn main() { }
